--- a/student-solution.css
+++ b/student-solution.css
@@ -38,12 +38,18 @@
     opacity: .0;
 }
 
-/* ESERCIZIO 5 da finire */
+/* ESERCIZIO 5 */
+
+.ex-5-square{
+    transition: .5s linear;
+}
 
 .ex-5-square:hover{
-    width: 100px;
-    height: 100%;
-    /* margin: 0; */
+    transform: scale(2);
+}
+
+.ex-5-square:active{
+    transform: scale(0.5);
 }
 
 /* ESERCIZIO 6 */
@@ -59,21 +65,21 @@
 }
 
 .ex-7-img:hover{
-    filter: sepia(45);
+    filter: sepia(70%) grayscale(30%);
 }
 
-/* ESERCIZIO 8 da trovare il secondo effetto*/
+/* ESERCIZIO 8*/
 
 .ex-8-img{
     transition: 5s;
 }
 
 .ex-8-img:hover{
-    filter: grayscale(25);
+    filter: grayscale(75%) blur(1px);
     border-radius: 8px;
 }
 
-/* ESERCIZIO 9 cercare il secondo effetto*/
+/* ESERCIZIO 9*/
 
 .ex-9-img{
     transition: 3s;
@@ -81,7 +87,7 @@
 }
 
 .ex-9-img:hover{
-    filter: grayscale(25);
+    filter: grayscale(25) sepia(50);
     border-radius:8px;
     transform: scale(1.5, 1.5);
 }
@@ -136,3 +142,99 @@
 
 /* ESERCIZIO 12 */
 
+a:hover .ex-12-top-white{
+    animation: button-top-1 2s linear forwards;
+}
+
+@keyframes button-top-1{
+    0%{
+        left: 10%;
+    }   
+    50%{
+        left: 65%;
+    }
+    100%{
+        left: 10%;
+    }
+}
+
+a:hover .ex-12-bottom-white{
+    animation: button-btm-1 2s linear forwards;
+}
+
+@keyframes button-btm-1{
+    0%{
+        right: 20%;
+    }   
+    50%{
+        right: 65%;
+    }
+    100%{
+        right: 20%;
+    }
+}
+
+/* ESERCIZIO 13 */
+
+a:hover .ex-13-top-white{
+    animation: button-top-2 3s linear forwards;
+}
+
+@keyframes button-top-2{
+    0%{
+        left: 20%;
+        top: -10px;
+    }
+    20%{
+        left: 180px;
+        top: -10px;
+    }
+    40%{
+        top: 60px;
+        left: 180px;
+    }
+    60%{
+        top: 60px;
+        left: -10px;
+    }
+    80%{
+        left: -10px;
+        top: -10px;
+    }
+    100%{
+        left: 20%;
+        top: -10px;
+    }
+}
+
+
+a:hover .ex-13-bottom-white{
+    animation: button-btm-2 3s linear forwards;
+}
+
+@keyframes button-btm-2{
+    0%{
+        bottom: -10px;
+        right: 20%;
+    }
+    20%{
+        bottom: -10px;
+        right: 150px;
+    }
+    40%{
+        bottom: 60px;
+        right: 150px;
+    }
+    60%{
+        bottom: 60px;
+        right:-10px;
+    }
+    80%{
+        bottom: -10px;
+        right: -10px;
+    }
+    100%{
+        bottom: -10px;
+        right: 20%;
+    }
+}
